<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <RelativeLayout
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="android.zhixun.uiho.com.gissystem.ui.activity.MainActivity"
        tools:visibility="gone">


        <FrameLayout
            android:id="@+id/contentContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/rg_bottom_radio_navigation"
            android:background="@color/colorWhite" />


        <RadioGroup
            android:id="@+id/rg_bottom_radio_navigation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rb_tab_unit"
                style="@style/BottomRadioNavigation"
                android:checked="true"
                android:drawableTop="@drawable/selector_unit"
                android:text="@string/tab_unit" />

            <RadioButton
                android:id="@+id/rb_tab_dispatch"
                style="@style/BottomRadioNavigation"
                android:drawableTop="@drawable/selector_dispatch"
                android:text="@string/tab_dispatch" />

            <RadioButton
                android:id="@+id/rb_tab_directory"
                style="@style/BottomRadioNavigation"
                android:drawableTop="@drawable/selector_directory"
                android:text="@string/tab_directory" />

            <RadioButton
                android:id="@+id/rb_tab_check"
                style="@style/BottomRadioNavigation"
                android:drawableTop="@drawable/selector_check"
                android:text="@string/tab_check" />
        </RadioGroup>

        <View
            android:layout_width="match_parent"
            android:layout_height="6dp"
            android:layout_above="@+id/rg_bottom_radio_navigation"
            android:background="@drawable/alpha_shadow" />

        <View
            android:id="@+id/rl_blank"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="51dp" />

        <LinearLayout
            android:id="@+id/ll_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/rl_blank"
            android:background="@color/CustomerActivityBackgroundColor"
            android:orientation="vertical">

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/aiv_layout"
                android:layout_width="match_parent"
                android:layout_height="24dp"
                android:background="#bbbbbb"
                app:srcCompat="@drawable/ic_expand_less_white_24dp" />

            <TextView
                android:id="@+id/tv_result_tip"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:text="查看结果" />

            <LinearLayout
                android:id="@+id/ll_layout_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="true"
                android:orientation="vertical">

                <android.zhixun.uiho.com.gissystem.ui.widget.VerticalRecyclerView
                    android:id="@+id/recyclerViewUnit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                </android.zhixun.uiho.com.gissystem.ui.widget.VerticalRecyclerView>
                <!--</Sc-->
            </LinearLayout>
        </LinearLayout>

        <!--标题栏-->
        <LinearLayout
            android:id="@+id/ll_title"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            android:background="@color/colorPrimary"
            android:clickable="true"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:visibility="gone"
            tools:visibility="visible">

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/aiv_back"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingLeft="16dp"
                android:paddingRight="4dp"
                app:srcCompat="@drawable/ic_arrow_back_24dp" />

            <TextView
                android:id="@+id/toolbar_title"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:maxLines="1"
                android:textColor="#FFFFFFFF"
                android:textSize="18sp"
                tools:text="这是标题栏" />

            <LinearLayout
                android:id="@+id/ll_menu"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:minWidth="44dp"
                android:orientation="horizontal" />

        </LinearLayout>
    </RelativeLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/navigationView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/nav_header_main"
        app:menu="@menu/activity_main_drawer">

    </android.support.design.widget.NavigationView>
</android.support.v4.widget.DrawerLayout>
