<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.zhixun.uiho.com.gissystem.ui.widget.BaseMapView
        android:id="@+id/mapView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </android.zhixun.uiho.com.gissystem.ui.widget.BaseMapView>

    <android.support.v7.widget.CardView
        android:id="@+id/cv_sift"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="55dp"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardCornerRadius="0dp"
        app:cardElevation="@dimen/cardView_elevation"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:id="@+id/ll_filtrate"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:gravity="center"
            android:orientation="vertical">

            <android.support.v7.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                app:srcCompat="@mipmap/ic_filter" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="-5dp"
                android:gravity="center"
                android:text="@string/sift"
                android:textColor="@color/primaryText"
                android:visibility="gone" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/cv_layer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginRight="12dp"
        android:layout_marginTop="55dp"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardCornerRadius="0dp"
        app:cardElevation="@dimen/cardView_elevation"
        app:cardUseCompatPadding="true">

        <android.support.v7.widget.AppCompatImageView
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:padding="8dp"
            app:srcCompat="@mipmap/ic_switch" />
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/cv_clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/cv_layer"
        android:layout_marginRight="12dp"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:visibility="gone"
        app:cardCornerRadius="0dp"
        app:cardElevation="@dimen/cardView_elevation"
        app:cardUseCompatPadding="true"
        tools:visibility="visible">

        <LinearLayout
            android:id="@+id/ll_clear"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:gravity="center"
            android:orientation="vertical">

            <android.support.v7.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                app:srcCompat="@mipmap/ic_quxiao" />

            <TextView
                android:id="@+id/tv_clear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="-5dp"
                android:gravity="center"
                android:text="@string/clear"
                android:textColor="@color/primaryText"
                android:visibility="gone" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/cv_statistics"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cv_sift"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="-2dp"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:visibility="gone"
        app:cardCornerRadius="0dp"
        app:cardElevation="@dimen/cardView_elevation"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:id="@+id/ll_statistics"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:gravity="center"
            android:orientation="vertical">

            <android.support.v7.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                app:srcCompat="@mipmap/ic_tongji" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="-5dp"
                android:gravity="center"
                android:text="@string/statistic"
                android:textColor="@color/primaryText"
                android:visibility="gone" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/cv_space"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cv_statistics"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="-2dp"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardCornerRadius="0dp"
        app:cardElevation="@dimen/cardView_elevation"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:id="@+id/ll_space"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:gravity="center"
            android:orientation="vertical">

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/aci_space"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:src="@mipmap/ic_kongjian" />

            <TextView
                android:id="@+id/tv_space"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="-5dp"
                android:gravity="center"
                android:text="@string/space"
                android:textColor="@color/primaryText"
                android:visibility="gone" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/cv_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cv_space"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="-2dp"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:visibility="gone"
        app:cardCornerRadius="0dp"
        app:cardElevation="@dimen/cardView_elevation"
        app:cardUseCompatPadding="true"
        tools:visibility="visible">

        <LinearLayout
            android:id="@+id/ll_draw"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:gravity="center"
            android:orientation="vertical">

            <android.support.v7.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:src="@mipmap/ic_quxiao" />

            <TextView
                android:id="@+id/tv_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="-5dp"
                android:gravity="center"
                android:text="@string/cancel"
                android:textColor="@color/primaryText"
                android:visibility="gone" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/cv_my_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="6dp"
        android:layout_marginLeft="12dp"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardCornerRadius="0dp"
        app:cardElevation="@dimen/cardView_elevation"
        app:cardUseCompatPadding="true">

        <android.support.v7.widget.AppCompatImageView
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:padding="8dp"
            app:srcCompat="@mipmap/ic_location" />
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="6dp"
        android:layout_marginRight="12dp"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardCornerRadius="0dp"
        app:cardElevation="@dimen/cardView_elevation"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="45dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/aiv_zoom_in"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:padding="8dp"
                app:srcCompat="@mipmap/ic_blow_up" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/colorDivider" />

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/aiv_zoom_out"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:padding="8dp"
                app:srcCompat="@mipmap/ic_shrink" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <include layout="@layout/layout_search" />


</RelativeLayout>